Fixed the images cropping and weirdly overflowing from divs

--- a/css/curiefense.css
+++ b/css/curiefense.css
@@ -1079,7 +1079,7 @@ strong {
   display: -ms-grid;
   display: grid;
   grid-auto-flow: row;
-  grid-auto-columns: 0.6fr;
+  grid-auto-columns: 0.49fr;
   grid-column-gap: 32px;
   grid-row-gap: 32px;
   grid-template-areas: ".";
@@ -1090,22 +1090,18 @@ strong {
 .blog-box {
   position: relative;
   overflow: hidden;
-  padding: 20px 20px 20px;
   border-radius: 10px;
   background-color: #fff;
   box-shadow: 14px 14px 65px 0 rgba(67, 109, 180, 0.15);
 }
 .blog-box-image {
-  position: absolute;
   overflow: hidden;
   width: 100%;
-  height: 300px;
-  margin-top: -20px;
   margin-bottom: 20px;
-  margin-left: -20px;
 }
-.blog-box-image.smaller {
-  height: 200px;
+.blog-intro {
+  padding-left: 20px;
+  padding-right: 20px;
 }
 .blog-box-img {
   width: 100%;
@@ -1121,9 +1117,6 @@ strong {
   line-height: 32px;
   font-weight: 500;
   letter-spacing: 0.2px;
-}
-.blog-box-sepparator {
-  height: 292px;
 }
 .blog-box-first {
   margin-bottom: 32px;
